# Solar_Panel_Optimizer

./: .gitignore  .replit  Pasted-First-Restructure-SolarPINN-class-SolarPINN-nn-Module-def-init-self-input-dim-8--1733373756171.txt  Pasted-In-modeling-solar-irradiance-for-photovoltaic-PV-systems-under-ideal-conditions-experts-typically-1733416919779.txt  Pasted-Let-s-clarify-everything-so-there-s-no-confusion-about-whether-this-is-a-PINN-model-what-we-are-cal-1733420373718.txt  Pasted-Updated-Code-Snippets-1-Physical-Constants-and-User-Defined-Inputs-Add-panel-slope-and-aspect-as-us-1733397242846.txt  Pasted-import-numpy-as-np-class-SolarPhysicsIdeal-def-init-self-Universal-physica-1733464654643.txt  Pasted-import-numpy-as-np-import-torch-import-torch-nn-as-nn-import-torch-nn-functional-as-F-class-Ph-1733459829853.txt  README.md  best_solar_pinn.pth  best_solar_pinn_ideal.pth  main.py  physics_equations.py  physics_validator.py  pyproject.toml  replit.nix  solar_pinn.py  solar_pinn_ideal.py  test_solar_astronomy.py  train_solar_pinn.py  train_solar_pinn_ideal.py  validate_solar_pinn.py  visualize_results.py
models/: enhanced_trainer.py  pinn_model.py  terrain_model.py
utils/: data_processor.py  solar_astronomy.py  solar_physics.py
visualization/: plots.py
