[project]
name = "repl-nix-solargridoptimizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.2",
    "folium>=0.18.0",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "numpy>=2.1.3",
    "optax",
    "plotly>=0.2.4",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.40.2",
    "torch>=2.5.1",
]
