[project]
name = "repl-nix-solargridoptimizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas",
    "plotly>=2.2.3",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.40.2",
    "torch>=2.5.1",
]
