[project]
name = "repl-nix-solargridoptimizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "matplotlib>=3.9.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "requests>=2.32.3",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.24.0",
    "torch>=2.0.0",
]
